header e banner ready

--- a/index.html
+++ b/index.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    
-
     <link rel="stylesheet" href="style.css">
     <title>Starbucks</title>
 </head>
+
 <body>
-    
+    <header>
+        <div class="line"></div>
+        <div class="container header-area">
+            <img class="logo" src="assets/logo.png" alt="Logo Starbucks">
+
+            <div class="rightside">
+                <form action="" method="GET">
+                    <input type="search" name="search" id="search" placeholder="Search">
+
+                    <button>
+                        <img src="assets/loupe.png" alt="Search icon">
+                    </button>
+                </form>
+
+                <img class="menu" src="assets/menu.png" alt="menu">
+            </div>
+        </div>
+    </header>
+
+    <section class="banner">
+        <div class="container">
+            <div class="text-banner">
+                <h1 class="titles">Starbucks® Happy Hour</h1>
+
+                <p>
+                    Encontraremos você em sua caixa de entrada. Ofertas de bebidas estão a caminho.
+                </p>
+            </div>
+
+            <div class="coffee-images-row">
+                <div class="coffee">
+                    <img src="assets/c1.jpg" alt="coffee with dulce de leche">
+                </div>
+
+                <div class="coffee">
+                    <img src="assets/c2.jpg" alt="coffee with chocolate">
+                </div>
+
+                <div class="coffee">
+                    <img src="assets/c3.jpg" alt="coffee with mint">
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <main>
+
+    </main>
+
 </body>
+
 </html>
