section grid ready

--- a/index.html
+++ b/index.html
@@ -56,9 +56,57 @@
         </div>
     </section>
 
-    <main>
+    <section class="area-grid">
+        <div class="card-description card-area1">
+            <h2 class="titles">
+                Quatro Bebidas, Um Milhão De Razões
+            </h2>
 
-    </main>
+            <span>
+                "Apenas ame a si mesmo e pronto." - Lady Gaga
+            </span>
+
+            <p>
+                Lady Gaga e a Starbucks compartilham uma missão: construir um mundo mais amável e corajoso. Por meio da
+                Fundação Born This Way, Lady Gaga inspirou seus fãs a abraçar a bondade em suas comunidades - online e
+                no
+                mundo todo. Com a sua ajuda, podemos capacitar os jovens a espalhar mais gentileza.
+            </p>
+
+            <a class="btn-content" href="">Saber mais</a>
+        </div>
+
+        <div class="area1-img1 picture">
+            <img src="assets/f2.jpg" alt="illustrative picture">
+        </div>
+
+        <div class="area1-img2 picture">
+            <img src="assets/f1.jpg" alt="illustrative picture">
+        </div>
+    </section>
+
+    <section class="area-grid">
+        <div class="card-description card-area2">
+            <h2 class="titles">
+                Apresentando Vanilla Sweet Cream Cold Brew - Doce, Cremoso, Frio, Ousado.
+            </h2>
+
+            <p>
+                Pouco antes de servir, nosso café Starbucks® Cold Brew de mistura lenta e personalizada é coberto com um delicado creme de baunilha doce feito em casa que se espalha por toda a xícara.
+            </p>
+
+            <a class="btn-content" href="">Saber mais</a>
+        </div>
+
+        <div class="area2-img1 picture">
+            <img src="assets/f4.jpg" alt="illustrative picture">
+        </div>
+
+        <div class="area2-img2 picture">
+            <img src="assets/f3.jpg" alt="illustrative picture">
+        </div>
+    </section>
+
 
 </body>
 
