background collection coofee ready

--- a/index.html
+++ b/index.html
@@ -130,6 +130,22 @@
         </div>
     </section>
 
+    <section class="cups-collection">
+        <div class="container">
+            <div class="card-description">
+                <h1 class="titles subtitles">
+                    A Bondade Começa Com Uma Xícara
+                </h1>
+
+                <p class="description">
+                    Apresentando a coleção Cups of Kindness: quatro drinks muito especiais tão deliciosos e refrescantes quanto lindos. Duas novas criações, Matcha Lemonade e Violet Drink, irão se juntar à Pink Drink e Ombré Pink Drink como favoritos instantâneos do verão.
+                </p>
+
+                <a class="btn-content" href="">Saber mais</a>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
