--- a/index.html
+++ b/index.html
@@ -146,6 +146,12 @@
         </div>
     </section>
 
+    <section class="tea-time">
+        <div class="tea-img picture">
+            <img src="assets/bg4.jpg" alt="Tea time">
+        </div>
+    </section>
+
 </body>
 
 </html>
