--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@
         </div>
     </section>
 
+    <footer>
+        <p>
+            Template criado com <a href="https://nicepage.com/pt/html-templates/preview/cafe-starbucks-17223?device=desktop">Nicepage.</a> 
+        </p>
+        
+        Feito com <span role="img" aria-label="coração">❤️</span> por Thiago Moreira!
+    </footer>
+
 </body>
 
 </html>
