--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/starbucks.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Starbucks</title>
 </head>
@@ -156,7 +157,7 @@
         <p>
             Template criado com <a href="https://nicepage.com/pt/html-templates/preview/cafe-starbucks-17223?device=desktop">Nicepage.</a> 
         </p>
-        
+
         Feito com <span role="img" aria-label="coração">❤️</span> por Thiago Moreira!
     </footer>
 
